fixed middle-text alignent

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,4 @@
+  
 body {
   height:100vh;
   font-family: 'Open Sans', sans-serif;
@@ -84,7 +85,6 @@ ul li a {
   margin:20px 0px 20px 0px;
   font-size:1.2rem;
   justify-content:center;
-  text-align:center;
 }
 
 @media only screen and (max-width: 1094px) {
